--- a/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
+++ b/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
@@ -182,6 +182,14 @@ body {
     margin-bottom: 1rem;
 }
 
+#passwordField{
+    margin:0;
+    padding:0;
+    user-select: none;
+}
+
+
+
 .settingChb {
     width: 50%;
     text-align: center;
@@ -222,12 +230,18 @@ option, select, input, #saveChangesAppConfig, #saveChangesFeedback, .setting, te
     font-size: 1rem;
 }
 
-#passReveal {
+/*#passReveal {
     display: grid;
-    width: 40%;
+    padding: .8rem;
     text-align: center;
     margin: auto;
     margin-bottom: 1rem;
+}*/
+
+#togglePassword {
+    display: inline;
+    margin-left: -2rem;
+    cursor: pointer;
 }
 /*#endregion Settings*/
 
@@ -287,7 +301,6 @@ option, select, input, #saveChangesAppConfig, #saveChangesFeedback, .setting, te
 }
 
 /*#endregion Search*/
-
 .opacity-value {
     color: var(--surface);
 }
