more simple name for database connection string

--- a/src/DigitalDrawingStore.Web.UI/Views/Administration/Settings.cshtml
+++ b/src/DigitalDrawingStore.Web.UI/Views/Administration/Settings.cshtml
@@ -15,7 +15,7 @@
     {
         <div id="appConfig">
             <div class="setting">
-                <label>Adatbázis csatlakozási szöveg</label>
+                <label>Adatbázis elérési útvonal</label>
                 <input name="DocumentDatabaseConnectionString" type="text" value="@documentResourceProperties.ResourcePath" />
             </div>
             <button id="saveChangesAppConfig" type="submit">Módosítások mentése</button>
