FIXED HUN ENCODING BUG ON PDFVIEWER

--- a/src/DigitalDrawingStore.Web.UI/Views/Shared/_Layout.cshtml
+++ b/src/DigitalDrawingStore.Web.UI/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <script>
         var baseUrl = '@Url.Content("~/")';
     </script>
-<div id="pdfViewer" class="modal" style="width: 95%;">
+<div id="pdfViewer" class="modal" style="width: 95%; height: 95%;">
     <div>
         <div>
             <button type="button" class="editor-menu-toggle">Szerkesztő megnyitása</button>
