fixed title and random jquery error

--- a/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
+++ b/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
@@ -128,7 +128,7 @@ body {
 .xpericad-header-title {
     display: flex;
     justify-content: center;
-    margin: auto 0 auto 0;
+    margin: auto 2% auto 0;
     font-size: 1.7em;
 }
 
