a lot of improvements
made sql-s more uniform
fixed visual clickable area size on hamburger menu button
made notification div not clickable
document/categories table details open/close interactions are now better
fixed "unsaved changes might be lost on exit" popup only apearing once for some reason

--- a/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
+++ b/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
@@ -562,9 +562,12 @@ table {
 /*#region Dropdown Menu*/
 .menu {
     width: 6rem;
-    cursor: pointer;
     margin-top: 1.2rem;
     transition: all .5s;
+}
+
+#menu {
+    cursor: pointer;
 }
 
 .menu.open {
@@ -714,6 +717,7 @@ table {
     z-index: 2;
     padding: 2rem 1rem;
     width: 100vw;
+    pointer-events: none;
 }
 
 #toast-container > * {
