--- a/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
+++ b/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
@@ -540,7 +540,7 @@ table {
 }
 
 @media screen and (min-width: 992px) {
-    .xpericad-dropdown-menu {
+    #xpericad-dropdown-menu {
         display: none;
     }
 }
@@ -566,7 +566,7 @@ table {
     transition: all .5s;
 }
 
-#menu {
+#menu, #langMenu {
     cursor: pointer;
 }
 
