--- a/src/DigitalDrawingStore.Web.UI/Views/Administration/Categories.cshtml
+++ b/src/DigitalDrawingStore.Web.UI/Views/Administration/Categories.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Categories";
-}
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+﻿<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="content-container">
     <div id="categoriesContentContainer" class="content-container"></div>
 </div>
