hide empty categories checkbox

--- a/src/DigitalDrawingStore.Web.UI/Views/Home/Index.cshtml
+++ b/src/DigitalDrawingStore.Web.UI/Views/Home/Index.cshtml
@@ -12,6 +12,10 @@
         A keresőmezőben a következő elemekre lehet keresni: <b>dokumentum-</b> és <b>kategória név</b>,
         <b>tulajdonság</b> vagy <b>tartalom</b>
     </small>
+    <span id="showEmptyCategory">
+        <label>Üres kategóriák megjelenítése: </label>
+        <input id="showEmptyCategoriesCheckbox" name="showEmpty" type="checkbox" />
+    </span>
 </div>
 <hr class="full" />
 <div id="contentContainer" class="content-container"></div>
