--- a/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
+++ b/src/DigitalDrawingStore.Web.UI/wwwroot/css/site.css
@@ -264,7 +264,7 @@ option, select, input, #saveChangesAppConfig, #saveChangesFeedback, .setting, te
     padding: .3rem;
 }
 
-.search input {
+.search input[type=text] {
     padding: .4rem;
     width: 100vw;
     margin: 0 .4rem;
@@ -303,6 +303,7 @@ option, select, input, #saveChangesAppConfig, #saveChangesFeedback, .setting, te
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
 }
+
 
 /*#endregion Search*/
 .opacity-value {
